# PythonTestFramework

./: .gitignore  README.md  environment.py  pyproject.toml
config/: custom_config.yaml  ebay_prod.yaml
features/amazon/: amazon.feature
features/custom_site_ui/: disney.feature
features/ebay_ui/: ebay.feature
features/google_ui/: google.feature
features/pages/: page.py
features/pages/amazon/: amazon_main_page.py  amazon_search_results_page.py  generic_amazon_page.py
features/pages/amazon/locators/: amazon_main_page_locators.py  amazon_search_results_locators.py  generic_amazon_page_locators.py
features/pages/disney/: disney_main_page.py  disney_second_page.py  generic_disney_page.py
features/pages/disney/locators/: disney_main_page_locators.py  disney_second_page_locators.py  generic_disney_page_locators.py
features/pages/ebay/: ebay_cart_page.py  ebay_item_details_page.py  ebay_item_details_page_locators.py  ebay_main_page.py  ebay_main_page_locators.py  ebay_search_results_page.py  ebay_search_results_page_locators.py  ebay_signin_page.py  generic_ebay_page.py  generic_ebay_page_locators.py
features/pages/ebay/locators/: ebay_cart_page_locators.py  ebay_item_details_page_locators.py  ebay_main_page_locators.py  ebay_search_results_page_locators.py  ebay_signin_page_locators.py  generic_ebay_page_locators.py
features/pages/google/: google_search_page.py
features/pages/widgets/: add_to_cart_widget.py  add_to_cart_widget_locators.py
steps/: amazon_steps.py  common_steps.py  disney_steps.py  ebay_steps.py  google_steps.py
