[tool.poetry]
name = "project-dependencies"
version = "0.1.0"
description = ""
authors = ["Anatolii.Dubovskyi <anatolii.dubovskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
selenium = "^4.18.1"
behave = "1.2.6"
requests = "^2.31.0"
webdriver-manager = "^4.0.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
